--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
         function login() {
             // Agrega la lógica de inicio de sesión si es necesario
             alert("¡Iniciar sesión!");
+            window.location.href = "decorshome.html";
+
         }
     </script>
 
