--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         // Mostrar la notificación si hay un nombre de cuenta
         if (nombreCuenta) {
-            document.getElementById("notification").innerHTML = "Bienvenido, " + nombreCuenta + "!";
+            document.getElementById("notification").innerHTML ="Bienvenido, " + nombreCuenta + "!",
             document.getElementById("notification").style.display = "block";
 
             // Limpiar el nombre de cuenta almacenado para que no se muestre nuevamente
