--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
             <div class="copy">
                 <p>Copyright © 2023 DECORS HOME-Perú. Todos los derechos reservados-Políticas de privacidad</p>
             </div>
+            <div class="ubicacion">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3902.1527815486074!2d-76.94318232536631!3d-12.03300094164374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1702933032803!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
 
     </div>
